[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commy"
version = "0.1.0"
description = "AI-powered commit message generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Commy Contributors"}
]
keywords = ["git", "commit", "message", "ai", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=12.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.scripts]
commy = "commy.main:main"

[project.urls]
"Homepage" = "https://github.com/username/commy"
"Bug Tracker" = "https://github.com/username/commy/issues" 